test/types/imag/opequals2.2.good
opequals2.chpl:6: error: Cannot assign to imag(64) from complex(128)
